testdata/test/resources/com/yafred/asn1/test/should_fail/choice_cannot_be_implicit_2.asn
-- FAIL
Untagged-Choice2 DEFINITIONS ::=
BEGIN

Type ::= SEQUENCE {
  component [0] IMPLICIT Choice
}

Choice ::= CHOICE { alternative NULL }

END
